fixing top margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -358,8 +358,9 @@ h6 {
 /* RESIZING FOR SMALLER SCREENS */
 @media screen and (max-width: 600px) {
   body {
-    margin-top: 2vh;
+    margin-top: 0vh;
   }
+  
   #show-all-container {
     margin-top: 3vh;
   }
